# ovc-sorting

./: .gitignore  CMakeLists.txt
data/: test1.txt
eval/: benchmark.sh  dataGeneration.sh  generateTestData.py
src/: Main.cpp  main.cpp
src/sort/: AOVC.h  BaseSort.cpp  BaseSort.h  CMakeLists.txt  Heapsort.cpp  Heapsort.h  HeapsortOVC.cpp  HeapsortOVC.h  InsertionSort.cpp  InsertionSort.h  InsertionSortAOVC.cpp  InsertionSortAOVC.h  InsertionSortOVC.cpp  InsertionSortOVC.h  Mergesort.cpp  Mergesort.h  MergesortOVC.cpp  MergesortOVC.h  OVC.h  Quicksort.cpp  Quicksort.h  QuicksortAOVC.cpp  QuicksortAOVC.h  QuicksortOVC.cpp  QuicksortOVC.h  Record.h  Sort.cpp  Sort.h  SortAlgorithm.h  Stats.h
test/: AOVCTest.cpp  CMakeLists.txt  HeapsortOVCTest.cpp  HeapsortTest.cpp  InsertionSortAOVCTest.cpp  InsertionSortOVCTest.cpp  InsertionSortTest.cpp  MainTest.cpp  MergesortOVCTest.cpp  MergesortTest.cpp  OVCTest.cpp  QuicksortAOVCTest.cpp  QuicksortOVCTest.cpp  QuicksortTest.cpp  RecordHelper.h  Utils.h  main_test.cpp
