add_library(
        sort
        BaseSort.cpp
        Heapsort.cpp
        HeapsortOVC.cpp
        InsertionSort.cpp
        InsertionSortOVC.cpp
        InsertionSortAOVC.cpp
        Mergesort.cpp
        MergesortOVC.cpp
        Quicksort.cpp
        QuicksortOVC.cpp
        QuicksortAOVC.cpp
)

target_include_directories(sort
        INTERFACE
        ${CMAKE_CURRENT_SOURCE_DIR}
)